fix place icon size in related resources when <1024px

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5774,6 +5774,9 @@ a.result + #matches.mobile,
    .resource .data .header { height:120px;}
 
    .resource.user .data .header .before, .resource:not(.user) .data .header::before {width:100px;height:100px; background-size: 65%; }
+   
+   .resource:not(.user) .data .header.place::before { background-size:40%; }
+
 
    /* .firstImage { height: 100vh;} */
    
